# MrBin

./: .gitignore  Apri-Cursor-ESP-IDF.cmd  CHANGELOG.md  MrBin.code-workspace  README.md  eim_config.toml.example
docs/: CORE_FIRMWARE.md  CURSOR_ESP_IDF.md  ESP-IDF_SETUP.md  README.md
schede/: README.md  esp32-p4-wifi6-m.md
scripts/: activate-idf.ps1  build-core.cmd  build-core.ps1  build-flash.cmd  idf-shell.cmd  install-idf.ps1  patch-gmf-fft.ps1  verify-workspace.ps1
src/: README.md
src/mrbin_core/: CMakeLists.txt  README.md  idf_component.yml  mrbin_core.ino  partitions.csv  sdkconfig.defaults
src/mrbin_core/main/: CMakeLists.txt  CoreAuth.cpp  CoreAuth.h  CoreConfig.h  CoreCrypto.cpp  CoreCrypto.h  CoreEncFs.cpp  CoreEncFs.h  CoreGPIO.cpp  CoreGPIO.h  CoreH264Buffer.cpp  CoreH264Buffer.h  CoreLive.cpp  CoreLive.h  CoreRecorder.cpp  CoreRecorder.h  CoreSD.cpp  CoreSD.h  CoreSettings.cpp  CoreSettings.h  CoreStatusLed.cpp  CoreStatusLed.h  CoreVideo.cpp  CoreVideo.h  CoreWeb.cpp  CoreWeb.h  idf_component.yml  mrbin_core_main.cpp
